--- a/3TestDXLRule.ini
+++ b/3TestDXLRule.ini
@@ -36,9 +36,9 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 ;设置分组标志位
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🚀 节点切换`select`^(?!.*(更新|订阅|速度|失联|异常|距离)).*$'
+custom_proxy_group=🚀 节点切换`select`*^(?=.*(更新|订阅|速度|失联|异常|距离)).*$'
 custom_proxy_group=🏡 家宽节点`url-test`(?=.*(家宽|家庭))`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=♻️ 自动选择`url-test`^(?!.*(更新|订阅|速度|失联|异常|距离|深港|家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|流媒体|倍率|GPT|Gpt|IPV6|ipv6|EMBY)).*$'http://www.gstatic.com/generate_204'500,,30
+custom_proxy_group=♻️ 自动选择`url-test`*^(?=.*(更新|订阅|速度|失联|异常|距离|深港|家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|流媒体|倍率|GPT|Gpt|IPV6|ipv6|EMBY)).*$'http://www.gstatic.com/generate_204'500,,30
 custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=💬 OpenAi`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]🔯 AI节点
 custom_proxy_group=👯‍♂️ TikTok`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
