--- a/DXLRule1.ini
+++ b/DXLRule1.ini
@@ -35,7 +35,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=♻️ 自动选择`url-test`(?=.*)^((?!(更新|订阅|速度|失联|异常|距离|深港|家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|流媒体|倍率|直连|IPv6|GPT|Gpt|IPV6|ipv6|EMBY)).)*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=♻️ 自动选择`url-test`(?=.*)^((?!(更新|订阅|速度|失联|异常|距离|深港|大陆|家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|流媒体|倍率|直连|IPv6|GPT|Gpt|IPV6|ipv6|EMBY)).)*$`http://www.gstatic.com/generate_204`300,,50
 
 custom_proxy_group=🚀 手动切换`select`(^(?!.*(更新|订阅|速度|失联|异常|距离)).*)
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
