--- a/DXLRule11.ini
+++ b/DXLRule11.ini
@@ -28,7 +28,7 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/DXL069/openclash/refs/heads/main/ME.list
 ruleset=🎯 全球直连,[]GEOIP,CN
 
-ruleset=⏱️ 网络检测,https://raw.githubusercontent.com/liandu2024/clash/refs/heads/main/list/Check.list
+ruleset=⏱️ 网络检测,https://raw.githubusercontent.com/DXL069/openclash/refs/heads/main/DDCheck.list
 
 ruleset=🐟 漏网之鱼,[]FINAL
 
@@ -53,7 +53,7 @@ custom_proxy_group=🎥 奈飞视频`select`[]🎥 奈飞节点`[]🚀 国外网
 custom_proxy_group=🌍 国外媒体`select`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🏡 家宽节点`[]🔯 原生节点`[]🌐 其他地区`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]🚀 手动切换
 
-custom_proxy_group=📥下载专用`select`[]🚀 国外网站`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]📥下载节点`[]🔯 原生节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=📥下载专用`select`[]🚀 国外网站`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🏡 家宽节点`[]🔯 原生节点`[]🚀 手动切换`[]DIRECT
 
 custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]♻️ 自动选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🚀 手动切换
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 国外网站`[]♻️ 自动选择
@@ -81,7 +81,6 @@ custom_proxy_group=🎥 奈飞节点`url-test`(?=.*(NF|奈飞|流媒体|解锁|N
 custom_proxy_group=🔯 AI节点`url-test`(?=.*(Gpt|GPT|gpt))`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔯 原生节点`select`(原生)
 custom_proxy_group=🏡 家宽节点`url-test`(?=.*(家宽|家庭))`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=📥下载节点`url-test`(?=.*(下载|0.1))`http://www.gstatic.com/generate_204`300,,50
 
 custom_proxy_group=🌐 其他地区`select`(^(?!.*(港|HK|hk|Hong Kong|HongKong|hongkong|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States|台|新北|彰化|TW|Taiwan|新加坡|坡|狮城|SG|Singapore|KR|Korea|KOR|首尔|韩|韓)).*)
 
