--- a/DXLRule11.ini
+++ b/DXLRule11.ini
@@ -66,7 +66,7 @@ custom_proxy_group=🔯 AI节点`url-test`(?=.*(Gpt|GPT|gpt))`http://www.gstatic
 
 custom_proxy_group=🔯 原生节点`select`(原生)
 
-custom_proxy_group=🏡 家宽节点`url-test`(?=.*(家宽|家庭))`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🏡 家宽节点`url-test`(?=.*(家宽|家庭|住宅))`http://www.gstatic.com/generate_204`300,,50
 
 custom_proxy_group=🌐 其他地区`select`(^(?!.*(港|HK|hk|Hong Kong|HongKong|hongkong|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States|台|新北|彰化|TW|Taiwan|新加坡|坡|狮城|SG|Singapore|KR|Korea|KOR|首尔|韩|韓)).*)
 
