--- a/DXLRule.ini
+++ b/DXLRule.ini
@@ -31,7 +31,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 ;设置分组标志位
 custom_proxy_group=♻️ 自动选择`url-test`(?=.*)^((?!(更新|订阅|速度|切换|节点解锁|测试|地址|失联|异常|距离|升级|请稍后|电信|移动|海外直连|非大陆|游戏|剩余|流量|流媒体|倍率|IPv6|IPV6|ipv6|EMBY)).)*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🚀 手动切换`select`(^(?!.*(更新|订阅|速度|失联|异常|距离)).*)
+custom_proxy_group=🚀 手动切换`select`(^(?!.*(更新|订阅|速度|失联|电信|移动|海外直连|非大陆|异常|距离)).*)
 custom_proxy_group=🚀 国外网站`select`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🏡 家宽节点`[]🔯 高速节点`[]🌐 其他地区`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=📲 电报消息`select`[]♻️ 自动选择`[]🚀 国外网站`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🕊️ Twitter(X)`select`[]♻️ 自动选择`[]🚀 国外网站`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
