--- a/DXLRule.ini
+++ b/DXLRule.ini
@@ -48,21 +48,21 @@ custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 国外网站`[]♻️ 自动选择`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换
 
 
-custom_proxy_group=🇭🇰 香港节点`url-test`(?=.*(港|HK|hk|Hong Kong|HongKong|hongkong))^((?!(GPT|gpt|IPv6|IPV6|深港|欧港专线|非大陆|家宽|游戏|流媒体|直连|剩余|流量)).)*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 香港节点`url-test`(?=.*(港|HK|hk|Hong Kong|HongKong|hongkong))^((?!(IPv6|IPV6|深港|欧港专线|非大陆|家宽|游戏|流媒体|直连|剩余|流量|电信|移动|海外直连|EMBY)).)*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇯🇵 日本节点`url-test`(?=.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan))^((?!(GPT|gpt|IPv6|IPV6|深港|非大陆|家宽|游戏|流媒体|直连|剩余|流量)).)*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本节点`url-test`(?=.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan))^((?!(IPv6|IPV6|深港|欧港专线|非大陆|家宽|游戏|流媒体|直连|剩余|流量|电信|移动|海外直连|EMBY)).)*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇺🇲 美国节点`url-test`(?=.*(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States))^((?!(GPT|Gpt|gpt|IPv6|IPV6|免费|下载|原生|深港|非大陆|家宽|游戏|流媒体|直连|剩余|流量)).)*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇲 美国节点`url-test`(?=.*(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States))^((?!(IPv6|IPV6|深港|欧港专线|非大陆|家宽|游戏|流媒体|直连|剩余|流量|电信|移动|海外直连|EMBY)).)*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇨🇳 台湾节点`url-test`(?=.*(台|新北|彰化|TW|Taiwan))^((?!(Gpt|GPT|gpt|IPv6|IPV6|深港|非大陆|家宽|下载|游戏|流媒体|直连|剩余|流量)).)*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇨🇳 台湾节点`url-test`(?=.*(台|新北|彰化|TW|Taiwan))^((?!(IPv6|IPV6|深港|欧港专线|非大陆|家宽|游戏|流媒体|直连|剩余|流量|电信|移动|海外直连|EMBY)).)*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇸🇬 狮城节点`url-test`(?=.*(新加坡|坡|狮城|SG|Singapore))^((?!(GPT|gpt|IPv6|IPV6|深港|非大陆|家宽|游戏|流媒体|直连|剩余|流量)).)*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 狮城节点`url-test`(?=.*(新加坡|坡|狮城|SG|Singapore))^((?!(IPv6|IPV6|深港|欧港专线|非大陆|家宽|游戏|流媒体|直连|剩余|流量|电信|移动|海外直连|EMBY)).)*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇰🇷 韩国节点`url-test`(?=.*(KR|Korea|KOR|首尔|韩|韓))^((?!(GPT|gpt|IPv6|深港|家宽|游戏|流媒体|直连|剩余|流量)).)*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇰🇷 韩国节点`url-test`(?=.*(KR|Korea|KOR|首尔|韩|韓))^((?!(IPv6|IPV6|深港|欧港专线|非大陆|家宽|游戏|流媒体|直连|剩余|流量|电信|移动|海外直连|EMBY)).)*$`http://www.gstatic.com/generate_204`300,,50
 
 custom_proxy_group=🎥 奈飞节点`url-test`(?=.*(NF|奈飞|流媒体|解锁|Netflix|NETFLIX|Media))`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🔯 高速节点`url-test`(?=.*(高速|专线))`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🔯 高速节点`url-test`(?=.*(高速|IEPL|IPLC|专线))`http://www.gstatic.com/generate_204`300,,50
 
 custom_proxy_group=🔯 AI节点`url-test`(?=.*(Gpt|GPT|gpt))`http://www.gstatic.com/generate_204`300,,50
 
