--- a/DXLRule6.7.ini
+++ b/DXLRule6.7.ini
@@ -30,7 +30,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=♻️ 自动选择`url-test`(?=.*)^((?!(更新|订阅|速度|切换|节点解锁|测试|地址|失联|异常|距离|升级|请稍后|电信|移动|海外直连|非大陆|游戏|剩余|流量|流媒体|倍率|IPv6|IPV6|ipv6|EMBY)).)*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=♻️ 自动选择`url-test`(?=.*)^((?!(更新|订阅|速度|切换|节点解锁|测试|地址|失联|异常|距离|升级|请稍后|电信|移动|海外直连|非大陆|游戏|剩余|流媒体|倍率|IPv6|IPV6|ipv6|EMBY)).)*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🚀 手动切换`select`(^(?!.*(更新|订阅|速度|失联|电信|移动|海外直连|非大陆|异常|距离)).*)
 custom_proxy_group=🚀 国外网站`select`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🏡 家宽节点`[]🌐 其他地区`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=📲 电报消息`select`[]♻️ 自动选择`[]🚀 国外网站`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
@@ -48,17 +48,17 @@ custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 国外网站`[]♻️ 自动选择`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换
 
 
-custom_proxy_group=🇭🇰 香港节点`url-test`(?=.*(港|HK|hk|Hong Kong|HongKong|hongkong))^((?!(IPv6|IPV6|深港|欧港专线|非大陆|家宽|游戏|流媒体|直连|剩余|流量|电信|移动|海外直连|EMBY)).)*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 香港节点`url-test`(?=.*(港|HK|hk|Hong Kong|HongKong|hongkong))^((?!(IPv6|IPV6|深港|欧港专线|非大陆|家宽|游戏|流媒体|直连|剩余|电信|移动|海外直连|EMBY)).)*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇯🇵 日本节点`url-test`(?=.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan))^((?!(IPv6|IPV6|深港|欧港专线|非大陆|家宽|游戏|流媒体|直连|剩余|流量|电信|移动|海外直连|EMBY)).)*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本节点`url-test`(?=.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan))^((?!(IPv6|IPV6|深港|欧港专线|非大陆|家宽|游戏|流媒体|直连|剩余|电信|移动|海外直连|EMBY)).)*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇺🇲 美国节点`url-test`(?=.*(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States))^((?!(IPv6|IPV6|深港|欧港专线|非大陆|家宽|游戏|流媒体|直连|剩余|流量|电信|移动|海外直连|EMBY)).)*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇲 美国节点`url-test`(?=.*(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States))^((?!(IPv6|IPV6|深港|欧港专线|非大陆|家宽|游戏|流媒体|直连|剩余|电信|移动|海外直连|EMBY)).)*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇨🇳 台湾节点`url-test`(?=.*(台|新北|彰化|TW|Taiwan))^((?!(IPv6|IPV6|深港|欧港专线|非大陆|家宽|游戏|流媒体|直连|剩余|流量|电信|移动|海外直连|EMBY)).)*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇨🇳 台湾节点`url-test`(?=.*(台|新北|彰化|TW|Taiwan))^((?!(IPv6|IPV6|深港|欧港专线|非大陆|家宽|游戏|流媒体|直连|剩余|电信|移动|海外直连|EMBY)).)*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇸🇬 狮城节点`url-test`(?=.*(新加坡|坡|狮城|SG|Singapore))^((?!(IPv6|IPV6|深港|欧港专线|非大陆|家宽|游戏|流媒体|直连|剩余|流量|电信|移动|海外直连|EMBY)).)*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 狮城节点`url-test`(?=.*(新加坡|坡|狮城|SG|Singapore))^((?!(IPv6|IPV6|深港|欧港专线|非大陆|家宽|游戏|流媒体|直连|剩余|电信|移动|海外直连|EMBY)).)*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇰🇷 韩国节点`url-test`(?=.*(KR|Korea|KOR|首尔|韩|韓))^((?!(IPv6|IPV6|深港|欧港专线|非大陆|家宽|游戏|流媒体|直连|剩余|流量|电信|移动|海外直连|EMBY)).)*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇰🇷 韩国节点`url-test`(?=.*(KR|Korea|KOR|首尔|韩|韓))^((?!(IPv6|IPV6|深港|欧港专线|非大陆|家宽|游戏|流媒体|直连|剩余|电信|移动|海外直连|EMBY)).)*$`http://www.gstatic.com/generate_204`300,,50
 
 custom_proxy_group=🔯 原生节点`select`(原生)
 
